# webnumbergame

./: README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: Dockerfile  README.md  REDEPLOY.md  pyproject.toml  requirements.txt  start.sh
backend/app/: config.py  database.py  dependencies.py  enums.py  main.py  security.py
backend/app/events/: manager.py
backend/app/game/: calculator.py  engine.py  scoring.py  special_game.py
backend/app/models/: __init__.py  match.py  problem.py  room.py  special_game.py  submission.py  team.py  tournament.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  dashboard.py  rooms.py  special_game.py  tournaments.py  users.py
backend/app/schemas/: __init__.py  admin.py  auth.py  dashboard.py  problem.py  room.py  special_game.py  tournament.py  user.py
backend/app/services/: game_service.py  room_cleanup.py  room_service.py  tournament_service.py
frontend/: Dockerfile  next-env.d.ts  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: RequireAuth.tsx  TopNav.tsx
frontend/hooks/: useAuth.ts  useLobby.tsx  useShellTransition.ts
frontend/lib/: api.ts  relay.ts  roomLabels.ts  runtimeConfig.ts  tiers.ts
참고/: NumberGame.spec  README.md  RULES.md  build.bat  constants.py  dingdong_windows_sound_test.py  final_sound_test.py  korean_sound_test.py  main.py  readme1.md  requirements.txt  shorter_sound_test.py  sound_test.py  sound_test_player.py  xylophone_sound_test.py
(+54 files in other folders)
